force-app/main/default/objects/Personal_Credit_Score_Model__mdt/Personal_Credit_Score_Model__mdt.object-meta.xml
<CustomObject>
    <description>Used to represent the credit calculations for JN.</description>
    <label>Personal Credit Score Model</label>
    <pluralLabel>Personal Credit Score Model</pluralLabel>
</CustomObject>