force-app/main/default/objects/Personal_Credit_Score_Model__mdt/fields/Salaried_Score_Number__c.field-meta.xml
<CustomField>
    <fullName>Salaried_Score_Number__c</fullName>
    <label>Salaried Score</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>