force-app/main/default/objects/Personal_Credit_Score_Model__mdt/fields/Sub_Criteria_Option__c.field-meta.xml
<CustomField>
    <fullName>Sub_Criteria_Option__c</fullName>
    <label>Sub Criteria Option</label>
    <length>255</length>
    <type>Text</type>
</CustomField>