force-app/main/default/objects/Personal_Credit_Score_Model__mdt/fields/Sub_Criteria_Options__c.field-meta.xml
<CustomField>
    <fullName>Sub_Criteria_Options__c</fullName>
    <label>Sub Criteria Options</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>&lt;1 year</fullName>
                <default>true</default>
                <label>&lt;1 year</label>
            </value>
            <value>
                <fullName>&lt;60%</fullName>
            </value>
            <value>
                <fullName>&gt;3 years</fullName>
            </value>
            <value>
                <fullName>&gt;5 years</fullName>
            </value>
            <value>
                <fullName>&gt;95%</fullName>
            </value>
            <value>
                <fullName>1 - 10 days Delinquent</fullName>
            </value>
            <value>
                <fullName>11 - 30 days Delinquent</fullName>
            </value>
            <value>
                <fullName>1-3 years</fullName>
            </value>
            <value>
                <fullName>31 - 60 days Delinquent</fullName>
            </value>
            <value>
                <fullName>4-5 years</fullName>
            </value>
            <value>
                <fullName>61%-85%</fullName>
            </value>
            <value>
                <fullName>61 - 90 days Delinquent</fullName>
            </value>
            <value>
                <fullName>86%-90%</fullName>
            </value>
            <value>
                <fullName>91%-95%</fullName>
            </value>
            <value>
                <fullName>Adequate</fullName>
            </value>
            <value>
                <fullName>Adequately Supported</fullName>
            </value>
            <value>
                <fullName>Agriculture</fullName>
            </value>
            <value>
                <fullName>Cash</fullName>
            </value>
            <value>
                <fullName>Clerical</fullName>
            </value>
            <value>
                <fullName>Construction</fullName>
            </value>
            <value>
                <fullName>Contracted</fullName>
            </value>
            <value>
                <fullName>Family</fullName>
            </value>
            <value>
                <fullName>Financial Services</fullName>
            </value>
            <value>
                <fullName>Good</fullName>
            </value>
            <value>
                <fullName>Good growth and or profit trends for 3 - 4 years</fullName>
            </value>
            <value>
                <fullName>Good growth and or profit trends for up to 2 years</fullName>
            </value>
            <value>
                <fullName>Government</fullName>
            </value>
            <value>
                <fullName>High School</fullName>
            </value>
            <value>
                <fullName>ICT</fullName>
            </value>
            <value>
                <fullName>Inadequate growth and or profit trends</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>