force-app/main/default/objects/Personal_Credit_Score_Model__mdt/fields/Sub_Criteria_Weight_Numbr__c.field-meta.xml
<CustomField>
    <fullName>Sub_Criteria_Weight_Numbr__c</fullName>
    <label>Sub Criteria Weight</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>