force-app/main/default/objects/Personal_Credit_Score_Model__mdt/listViews/Basic.listView-meta.xml
<ListView>
    <fullName>Basic</fullName>
    <columns>MasterLabel</columns>
    <columns>Salaried_Score_Number__c</columns>
    <columns>Self_Employed_Score_Number__c</columns>
    <columns>Sub_Criteria_Option__c</columns>
    <columns>Sub_Criteria_Options__c</columns>
    <columns>Sub_Criteria_Weight_Numbr__c</columns>
    <filterScope>Everything</filterScope>
    <label>Basic</label>
</ListView>